added more stuff

--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 
 body{
- background-color: rgb(218, 189, 134);
-}
-nav > a{
-    background-color: rgb(212, 176, 125);
-     padding: 8px 12px;
-    text-decoration: none;
-}
-#Name{
- 
-}
-body{
-
-}
+    background-color: rgb(219, 112, 104);
+   }
+   nav > a{
+       background-color: #e7724e;
+        padding: 8px 12px;
+       text-decoration: none;
+   }
+   #Name{
+    
+   }
+   body{
+   
+   }
