--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ background-color: indianred;
     padding: 8px;
     
    }
+   .ImageAlign{
+    text-align: center;
+   }
   
 @media screen and (max-width: 480px) {
     body {
